# pico-freertos-project-template

./: CMakeLists.txt  README.md
freertos/hello_freertos/: CMakeLists.txt  hello_freertos.c
src/: CMakeLists.txt  main.c
